# AntiLLMade

./: .gitignore  DEPLOY.md  README.md  conftest.py  docker-compose.split.yml  pytest.ini  railway.json  vercel.json
.github/workflows/: ci.yml
agents/digest-editor/: AGENT.md  digest_editor.py
automation/: codex_automation.yaml  push_openclaw.py
backend/: TESTING.md  main.py  pyproject.toml  railway.json  requirements.txt  start.sh  storage.py  summarizer.py  test_api.py  test_e2e.py  test_manual.py
data/: categories.json  subscriptions.opml
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  vitest.config.js
frontend/src/: App.jsx  styles.css
frontend/src/__tests__/: App.test.jsx  Digest.test.jsx  Sources.test.jsx
frontend/src/components/: DigestWaterfall.jsx  SourceCards.jsx  SourceForm.jsx  (+1 more)
mcp/: rss_mcp_server.py
services/: .env.example  README.md  start.sh
services/data-service/: Dockerfile  config.yaml  main.py  requirements.txt  schema.sql
services/digest-service/: Dockerfile  config.yaml  main.py  requirements.txt
services/gateway/: Dockerfile  config.yaml  main.py  requirements.txt
services/mcp-tools/: Dockerfile  config.yaml  main.py
services/rss-service/: Dockerfile  config.yaml  main.py  requirements.txt
services/scheduler/: Dockerfile  config.yaml  main.py
services/shared/: models.py
services/source-service/: Dockerfile  config.yaml  main.py  requirements.txt
services/summary-service/: Dockerfile  config.yaml  main.py  requirements.txt
skills/rss-daily-briefing/: SKILL.md
(+2 files in other folders)
